# magnet

./: .gitignore  README.md
app/: docker-compose.yml
app/backend/backend/: crawler.py  deco_worker.py  env.py  main.py  prestart.sh  pyproject.toml
app/backend/backend/entrypoint/: start_crawler.py
app/backend/backend/rabbitmq/: __init__.py  __main__.py  tasks.py
middleware/backend/app/: .gitignore  _workers.py  deco_sender.py  env.py  main.py  myworker.py  prestart.sh  pyproject.toml  tables.md
middleware/backend/app/alembic/: env.py
middleware/backend/app/alembic/versions/: 00fb105ccbca_.py  02efb8965f94_.py  1049189fa2f3_.py  1e2869a009a1_.py  20200910_020631_.py  20200924_104512_.py  20200925_023639_.py  20200929_084059_.py  20200929_084414_.py  20200929_084536_.py  20200929_093643_.py  20200930_032001_.py  20200930_035800_.py  20200930_064649_.py  20200930_064944_.py  20200930_201204_.py  20201012_182606_.py  20201014_190603_.py  20201014_191741_.py  20201021_001447_.py  20201021_001530_.py  20201021_001556_.py  20201021_002002_.py  20201021_002015_.py  20201021_002319_.py  20201021_002347_.py  20201021_003255_.py  20201021_003341_.py  20201021_003435_.py  20201021_061515_.py  20201021_061544_.py  20201021_065048_.py  20201021_070445_.py  20201021_190653_.py  20201021_194126_.py  20201022_061055_.py  20201024_213933_.py  20201026_094002_.py  20201026_094051_.py  20201026_094553_.py  (+29 more)
middleware/backend/app/backend/: main.py
middleware/backend/app/cli/: __main__.py  cli_db.py  cli_dev.py  cli_elasticsearch.py  cli_rabbitmq.py  cli_uvicorn.py
middleware/backend/app/cli/template/: views.py.mako
middleware/backend/app/entrypoint/: start_crawler.py
middleware/backend/app/jupyter/: ohlc.ipynb  sqlalchemy_out_design.ipynb
middleware/backend/app/libs/: __init__.py  generator.py  inspect.py  undefined.py  worker.py
middleware/backend/app/libs/decorators/: __init__.py  abstract.py  impl.py
middleware/backend/app/libs/fastapi/: __init__.py  importer.py  utils.py
middleware/backend/app/libs/linq/: __init__.py  linq.py  operators.py
middleware/backend/app/libs/pydantic/: __init__.py  decorators.py  model.py  models.py  utils.py
middleware/backend/app/libs/security/: access_token.py
middleware/backend/app/libs/structures/: jobnet.py
middleware/backend/app/libs/typing/: __init__.py  usertypes.py
middleware/backend/app/magnet/: __init__.py  commons.py  config.py  crud.py  database.py  env.py  log.py  models.py  schemas.py  vendors.py
middleware/backend/app/magnet/api/: user.py
middleware/backend/app/magnet/crawler/: crud.py  driverpool.py  views.py
middleware/backend/app/magnet/datastore/: analyzer.py  crud.py  models.py  schemas.py
middleware/backend/app/magnet/develop/: views.py
middleware/backend/app/magnet/executor/: crud.py  models.py  schemas.py  service.py  views.py  worker.py
middleware/backend/app/magnet/ingester/: crud.py  impl.py  models.py  schemas.py  service.py  views.py
middleware/backend/app/magnet/jobs/: jobs.py
middleware/backend/app/magnet/keywords/: models.py  schemas.py
middleware/backend/app/magnet/research/: crud.py  models.py  schemas.py  views.py
middleware/backend/app/magnet/scaffold/: crud.py  models.py  schemas.py  views.py
middleware/backend/app/magnet/streamlit_ui/: main.py
middleware/backend/app/rabbitmq/: __init__.py  __main__.py  consumer.py  coordinator.py  process.py  schemas.py  task.py
middleware/backend/app/tests/: conftest.py  test_env.py  test_platform.py
middleware/backend/app/watcher/: __init__.py  models.py
(+86 files in other folders)
