[tool.poetry]
name = "magnet"
version = "0.1.0"
description = ""
authors = ["sasano8"]
license = "MIT"

[tool.poetry.dependencies]
# python = "^3.6.9"
python = "^3.8"
# python = "^3.9"
# for python 3.6
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
python-multipart = "^0.0.5"

# for python 3.8
importlib_metadata = "^1.7"

# framework
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
fastapi = "^0.58.0"
fastapi-utils = "^0.2.1"
typer = "^0.2.1"
pydantic = "^1.6.1"

# database/message queue
sqlalchemy = "^1.3.17"
sqlalchemy-utils = "^0.36.6"
eralchemy = "^1.2.10"  # output entity relation from sqlalchemy
psycopg2-binary = "*"  # postgresSQL
alembic = "^1.4.2"
pika = "^1.1.0"
elasticsearch = "*"


# scraping
selenium = "^3.141.0"
pyvirtualdisplay = "*"
bs4 = "*"
# beautifulsoup4 = "*"


# etl
pandas = "*"
openpyxl = "*"
xlrd = "*"
xlsxwriter = "*"


# ingest components
tika = "==1.23"
# pillow = "*"
# pytesseract = "*"
# wand = "*"


# utils
python-dotenv = "*"
jinja2 = "^2.11.2"
hjson = "*"
jaconv = "*"
requests = "^2.24.0"
httpx = "^0.14.3"
genson = "^1.2.2"
pyyaml = "^5.3.1"
datamodel-code-generator = "^0.5.32"

# security
pyjwt = "^1.7.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pydotplus = "^2.0.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
matplotlib = "^3.3.2"
streamlit = "^0.69.2"
jsonnet = "^0.16.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.9.0"
pytest-asyncio = "^0.14.0"
black = "^19.10b0"
isort = "^4.3.21"

# [tool.poetry-dynamic-versioning]
# enable = true
psutil = "^5.7.0"
# style = "pep440"

[tool.coverage.run]
source = ["backend"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude_lines = 'if __name__ == .__main__.:'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

